Files for Export automation added

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 /app/export_apex_app_sqlcl.bat
-/app/export_apex_app_sqlcl.sql
-/app/export_apex_app_sqlcl_split.sql
+/www/css/apexvisualizer.css
+/www/js/apexvisualizer.js
