testing standard APEX icon

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
             "description": "An APEX Application, which can visualize many details of all applications in the same workspace.",
             "author": "Oliver Lemm",
             "version": "22.1",
-			"icon" : "",
+			"icon" : "https://raw.githubusercontent.com/oracle/apex/22.1/docs/img/apps/app-sample-approvals.svg",
             "url": "https://github.com/OliverLemm/apex-visualizer",
             "source": "https://github.com/OliverLemm/apex-visualizer/releases/download/v22.1/apex_visualizer.sql",
             "zip": "https://github.com/OliverLemm/apex-visualizer/releases/download/v22.1/apex_visualizer.zip"
