Solving Grouping Bugs for JavaScript Page

--- a/app/yaml/pages/p00100.yaml
+++ b/app/yaml/pages/p00100.yaml
@@ -206,7 +206,7 @@ regions:
     location: Local Database
     type: SQL Query
     sql-query: |
-      select page_name || ' - ' || v.component_name series_name, 
+      select page_name || ' (' || v.page_id || ') - ' || v.component_name series_name, 
              v.component_type, 
              v.js_code, 
              v.js_code_length, 
