--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "customApps": [
         {
-            "internalName": "APEX_VISUALIZER",
-            "name": "APEX Visualizer",
+            "internalName": "APEX_VISUALIZER_22_1",
+            "name": "APEX Visualizer 22.1.2",
             "description": "An APEX Application, which can visualize many details of all applications in the same workspace. This version can be installed in APEX 22.1 or higher and supports migration checks till APEX version 22.2.",
             "author": "Oliver Lemm",
             "version": "22.1.2",
@@ -12,8 +12,8 @@
             "zip": "https://raw.githubusercontent.com/OliverLemm/apex-visualizer/v22.1.2/app/apex_visualizer.zip"
         },
 		{
-            "internalName": "APEX_VISUALIZER",
-            "name": "APEX Visualizer",
+            "internalName": "APEX_VISUALIZER_22_2",
+            "name": "APEX Visualizer 22.2",
             "description": "An APEX Application, which can visualize many details of all applications in the same workspace. This version can be installed in APEX 22.2 or higher and supports migration checks till APEX version 22.2.",
             "author": "Oliver Lemm",
             "version": "22.2",
