--- a/manifest.json
+++ b/manifest.json
@@ -11,15 +11,15 @@
             "source": "https://raw.githubusercontent.com/OliverLemm/apex-visualizer/v22.1.2/app/apex_visualizer.sql",
             "zip": "https://raw.githubusercontent.com/OliverLemm/apex-visualizer/v22.1.2/app/apex_visualizer.zip"
         },{
-            "internalName": "APEX_VISUALIZER_22_2",
-            "name": "APEX Visualizer 22.2",
+            "internalName": "APEX_VISUALIZER_22_2_1",
+            "name": "APEX Visualizer 22.2.1",
             "description": "An APEX Application, which can visualize many details of all applications in the same workspace. This version requires APEX 22.2 or higher.",
             "author": "Oliver Lemm",
-            "version": "22.2",
+            "version": "22.2.1",
 			"icon" : "",
             "url": "https://github.com/OliverLemm/apex-visualizer",
-            "source": "https://raw.githubusercontent.com/OliverLemm/apex-visualizer/v22.2/app/apex_visualizer.sql",
-            "zip": "https://raw.githubusercontent.com/OliverLemm/apex-visualizer/v22.2/app/apex_visualizer.zip"
+            "source": "https://raw.githubusercontent.com/OliverLemm/apex-visualizer/v22.2.1/app/apex_visualizer.sql",
+            "zip": "https://raw.githubusercontent.com/OliverLemm/apex-visualizer/v22.2.1/app/apex_visualizer.zip"
         }
     ]
 }
