Upgrade Assistant for Item Settings and Interactive Report Settings

--- a/app/yaml/pages/p00010.yaml
+++ b/app/yaml/pages/p00010.yaml
@@ -662,7 +662,7 @@ regions:
       pivot: true
       flashback: true
       save-report: true
-      save-public-report: false
+      save-public-report: true
       reset: true
       help: true
       download: true
