--- a/app/yaml/pages/p00060.yaml
+++ b/app/yaml/pages/p00060.yaml
@@ -162,8 +162,8 @@ regions:
       alignment: end
 
     settings: 
-      number-alignment: End
-      virtual-keyboard: Text
+      number-alignment: Start
+      virtual-keyboard: Decimal
 
     layout: 
       sequence: 10
