--- a/app/yaml/pages/p00400.yaml
+++ b/app/yaml/pages/p00400.yaml
@@ -326,8 +326,8 @@ regions:
       alignment: end
 
     settings: 
-      number-alignment: End
-      virtual-keyboard: Text
+      number-alignment: Start
+      virtual-keyboard: Decimal
 
     layout: 
       sequence: 70
