--- a/app/yaml/pages/p00020.yaml
+++ b/app/yaml/pages/p00020.yaml
@@ -636,7 +636,7 @@ regions:
       pivot: true
       flashback: true
       save-report: true
-      save-public-report: false
+      save-public-report: true
       reset: true
       help: true
       download: true
