--- a/app/yaml/pages/p00500.yaml
+++ b/app/yaml/pages/p00500.yaml
@@ -160,8 +160,8 @@ regions:
       alignment: end
 
     settings: 
-      number-alignment: End
-      virtual-keyboard: Text
+      number-alignment: Start
+      virtual-keyboard: Decimal
 
     layout: 
       sequence: 20
@@ -498,8 +498,8 @@ regions:
       alignment: end
 
     settings: 
-      number-alignment: End
-      virtual-keyboard: Text
+      number-alignment: Start
+      virtual-keyboard: Decimal
 
     layout: 
       sequence: 30
@@ -788,8 +788,8 @@ regions:
       alignment: end
 
     settings: 
-      number-alignment: End
-      virtual-keyboard: Text
+      number-alignment: Start
+      virtual-keyboard: Decimal
 
     layout: 
       sequence: 20
@@ -839,8 +839,8 @@ regions:
       alignment: end
 
     settings: 
-      number-alignment: End
-      virtual-keyboard: Text
+      number-alignment: Start
+      virtual-keyboard: Decimal
 
     layout: 
       sequence: 30
