--- a/app/yaml/pages/p00600.yaml
+++ b/app/yaml/pages/p00600.yaml
@@ -654,8 +654,8 @@ regions:
       alignment: end
 
     settings: 
-      number-alignment: End
-      virtual-keyboard: Text
+      number-alignment: Start
+      virtual-keyboard: Decimal
 
     layout: 
       sequence: 20
